@@ -183,6 +183,7 @@ Septemtober ? 2019 [Fufluns]
       glitches when using camera script commands with large walkabouts [Ralph]
     * Can import .wav files as music
     * You can activate NPCs while holding down an arrow key [Ralph]
+    * "free slice(0)" no longer shows a warning
 
   * Bugfixes
     * Fix a major memory leak while recording .gifs [Ralph]
